Improve enums