@@ -1,5 +1,7 @@
 package com.idealista.infrastructure.config;
 
+import com.idealista.domain.Ad;
+import com.idealista.domain.Picture;
 import com.idealista.infrastructure.persistence.entities.AdVO;
 import com.idealista.infrastructure.persistence.entities.PictureVO;
 import com.idealista.infrastructure.persistence.jpa.AdVORepository;
@@ -21,14 +23,14 @@ public class DatabaseInitializer {
     public CommandLineRunner initDatabase(AdVORepository adVORepository, PictureVORepository pictureVORepository) {
         return args -> {
             List<PictureVO> pictures = pictureVORepository.saveAll(Arrays.asList(
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/1", "SD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/2", "HD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/3", "SD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/4", "HD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/5", "SD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/6", "SD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/7", "SD", null),
-                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/8", "HD", null)
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/1", Picture.Quality.SD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/2", Picture.Quality.HD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/3", Picture.Quality.SD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/4", Picture.Quality.HD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/5", Picture.Quality.SD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/6", Picture.Quality.SD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/7", Picture.Quality.SD.name(), null),
+                    new PictureVO(UUID.randomUUID(), "http://www.idealista.com/pictures/8", Picture.Quality.HD.name(), null)
             ));
 
             UUID pic1Id = pictures.get(0).getId();
@@ -41,14 +43,14 @@ public class DatabaseInitializer {
             UUID pic8Id = pictures.get(7).getId();
 
             adVORepository.saveAll(Arrays.asList(
-                    new AdVO(UUID.randomUUID(), "CHALET", "Este piso es una ganga, compra, compra, COMPRA!!!!!", findPictures(pictures, Collections.emptyList()), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "FLAT", "Nuevo ático céntrico recién reformado. No deje pasar la oportunidad y adquiera este ático de lujo", findPictures(pictures, List.of(pic4Id)), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "CHALET", "", findPictures(pictures, List.of(pic2Id)), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "FLAT", "Ático céntrico muy luminoso y recién reformado, parece nuevo", findPictures(pictures, List.of(pic5Id)), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "FLAT", "Pisazo,", findPictures(pictures, Arrays.asList(pic3Id, pic8Id)), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "GARAGE", "", findPictures(pictures, List.of(pic6Id)), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "GARAGE", "Garaje en el centro de Albacete", findPictures(pictures, Collections.emptyList()), 300, null, null, null),
-                    new AdVO(UUID.randomUUID(), "CHALET", "Maravilloso chalet situado en lAs afueras de un pequeño pueblo rural. El entorno es espectacular, las vistas magníficas. ¡Cómprelo ahora!", findPictures(pictures, Arrays.asList(pic1Id, pic7Id)), 300, null, null, null)
+                    new AdVO(UUID.randomUUID(), Ad.Typology.CHALET.name(), "Este piso es una ganga, compra, compra, COMPRA!!!!!", findPictures(pictures, Collections.emptyList()), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.FLAT.name(), "Nuevo ático céntrico recién reformado. No deje pasar la oportunidad y adquiera este ático de lujo", findPictures(pictures, List.of(pic4Id)), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.CHALET.name(), "", findPictures(pictures, List.of(pic2Id)), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.FLAT.name(), "Ático céntrico muy luminoso y recién reformado, parece nuevo", findPictures(pictures, List.of(pic5Id)), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.FLAT.name(), "Pisazo,", findPictures(pictures, Arrays.asList(pic3Id, pic8Id)), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.GARAGE.name(), "", findPictures(pictures, List.of(pic6Id)), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.GARAGE.name(), "Garaje en el centro de Albacete", findPictures(pictures, Collections.emptyList()), 300, null, null, null),
+                    new AdVO(UUID.randomUUID(), Ad.Typology.CHALET.name(), "Maravilloso chalet situado en lAs afueras de un pequeño pueblo rural. El entorno es espectacular, las vistas magníficas. ¡Cómprelo ahora!", findPictures(pictures, Arrays.asList(pic1Id, pic7Id)), 300, null, null, null)
             ));
         };
     }
